Fix hour text overlap on certain screens

--- a/src/styles/hourlist.scss
+++ b/src/styles/hourlist.scss
@@ -14,7 +14,7 @@
             cursor: pointer;
             user-select: none;
             display: inline-block;
-            width: 50px;
+            width: 60px;
             text-align: center;
         }
 
